Implement projectile items